--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -12,3 +12,11 @@ h1 {
   margin-bottom: 0.5em;
   text-align: center;
 }
+h2 {
+  color: #3c3c3c;
+  font-size: 2.5em;
+  margin-bottom: 0.5em;
+}
+ul {
+  padding-inline-start: 0;
+}
