--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -8,7 +8,7 @@ nav ul li {
     height: 20px;
     list-style: none;
     margin: 0 5px;
-    padding: 0 5px;
+    padding: 5px;
 }
 nav a {
     color: #4150b1;
