--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -8,7 +8,7 @@ footer ul li {
     height: 20px;
     list-style: none;
     margin: 0 5px;
-    padding: 0 5px;
+    padding: 5px;
 }
 footer a {
     color: #4150b1;
