--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,6 @@
 .app {
   background-color: #8f68a9;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .header-container,
 .footer-container {
