--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,3 +1,8 @@
+.container h2 {
+    color: #3c3c3c;
+    font-size: 2.5em;
+    margin-bottom: 0.5em;
+}
 .box {
     background-color: #fff;
     border-radius: 25px;
