--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -3,10 +3,24 @@
     font-size: 2em;
     margin-bottom: 0.5em;
 }
+.container h3 {
+    color: #3c3c3c;
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
+}
+.container h4 {
+    font-size: 1.25em;
+    margin-bottom: 0.5em;
+}
 .box {
     background-color: #fff;
     border-radius: 25px;
-    margin: 20px auto;
+    margin: 20px;
     max-width: 800px;
     padding: 20px;
+}
+@media only screen and (min-width: 840px){
+    .box {
+        margin: 20px auto;
+    }
 }
