--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -8,8 +8,17 @@
   background: #8f68a9;
   background: linear-gradient(90deg, #4150b1 0%, #8f68a9 30%, #bc6894 60%, #f6bf75 100%);
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  min-height: 75px;
+  min-height: 125px;
+}
+.externals a {
+  background-color: #fff;
+  border-radius: 5px;
+  color: #4150b1;
+  margin: 10px;
+  padding: 5px 10px;
+  text-decoration: none;
 }
 h1 {
   color: #fff;
