--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -16,6 +16,9 @@
     border-bottom: 5px solid #f6bf75;
     padding-bottom: 10px;
 }
+.education .entry {
+    margin: 20px 0;
+}
 @media only screen and (min-width: 450px){
     .knowledge {
         columns: 2;
