--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,6 +2,7 @@
     margin-left: 20px;
 }
 .knowledge li,
+.projects li,
 .companies li {
     list-style: square;
     padding-bottom: 10px;
@@ -11,6 +12,9 @@
     margin-top: 20px;
     padding-left: 20px;
     padding-top: 20px;
+}
+.projects h3 {
+    margin-top: 3em;
 }
 .education h2 {
     border-bottom: 5px solid #f6bf75;
